# personal-croquis-frontend

./: .commitlintrc.json  .env.example  .gitignore  .npmrc  CHANGELOG.md  CONTRIBUTING.md  README.md  TODO.md  backup.env.example  cliff.toml  compose.yml  docker-compose.yml  dockerfile  package-lock.json  package.json
.config/: kysely.config.ts
.github/workflows/: checks.yml  commit-lint.yml  commit.yml  release.yml
app/: .env.example  .npmrc  package-lock.json  package.json  svelte.config.js  vite.config.ts
app/.config/: kysely.config.ts  load-env.ts
app/migrations/: 1761468786174_database-init.ts
app/src/: app.html  types.ts
app/src/lib/: tag-display.ts  toasts.ts  utils.ts
app/src/routes/: +layout.svelte  +page.server.ts  +page.svelte
docs/: TODO.md  architecture.md  backups.md  deployment.md  development.md
image-tagger-api/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
image-tagger-api/src/image_tagger/: main.py  schemas.py  settings.py  tagger.py  vlm_tagger.py
image-tagger-worker/: .env.example  .gitignore  Dockerfile  package-lock.json  package.json  tsconfig.json
image-tagger-worker/src/: blob-storage.ts  config.ts  db.ts  index.ts  load-env.ts  tagging-service.ts  tags.ts  types.ts  worker.ts
migrations/: 1761468786174_database-init.ts
src/: constants.ts  types.ts
src/lib/components/: bars.svelte
src/lib/server/: blob-storage-client.ts  random-file.ts
src/routes/: +layout.svelte  +page.server.ts  +page.svelte
src/routes/gallery/: +page.server.ts  +page.svelte
static/models/: mannequin.glb
(+31 files in other folders)
