[project]
name = "image-tagger-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fairscale>=0.4.13",
    "fastapi[standard]>=0.136.3",
    "httpx>=0.28.1",
    "ollama>=0.6.2",
    "pillow>=12.2.0",
    "pydantic-settings>=2.14.1",
    "python-multipart>=0.0.32",
    "ram",
    "requests>=2.34.2",
    "scipy>=1.17.1",
    "timm>=1.0.27",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "transformers==4.25.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.17",
    "ty>=0.0.49",
]

# Install CPU-only builds of torch/torchvision. This avoids pulling the large
# CUDA/nvidia-* wheels (several GB), which are useless without NVIDIA hardware.
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
ram = { git = "https://github.com/xinyu1205/recognize-anything.git" }
torch = [{ index = "pytorch-cpu" }]
torchvision = [{ index = "pytorch-cpu" }]
